tests/javacresults/fail_badop_chord_composition.txt
Intermediate.java:1: error: class, interface, or enum expected
Fatal error: exception Failure("Cannot assign composition to c1 of type chord")
^
1 error
